[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-real-world"
version = "0.1.0"
description = "OpenEnv-compatible reinforcement learning environment for realistic tasks"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Suraj Seth" }
]

dependencies = [
  "fastapi>=0.116.1",
  "uvicorn[standard]>=0.35.0",
  "pydantic>=2.11.7",
  "openai>=1.99.9",
  "python-dotenv>=1.0.1"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["openenv_env*"]
